🐛 Corrected bug: Homepage has now a better look (border-radius, content-alignment and div max sizes)

--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,7 +1,8 @@
 .gallery-container {
+    padding: 56px 0 40px 0;
     background-color: #F7F7F7;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 0 50px 0;
+    border-radius: 25px;
 }
