--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,4 +1,10 @@
 .homepage {
     margin: 0 auto;
-    max-width: 1440px;
+    max-width: 1240px;
+}
+
+@media screen and (max-width: 1440px) {
+    .homepage {
+        margin: 0 100px;
+    }
 }
